--- a/Regresión/Regresion_Bajas_Antiguedad_v9.ipynb
+++ b/Regresión/Regresion_Bajas_Antiguedad_v9.ipynb
@@ -56,7 +56,7 @@
         "auth.authenticate_user()\n",
         "gc = gspread.authorize (GoogleCredentials.get_application_default())"
       ],
-      "execution_count": 65,
+      "execution_count": 1,
       "outputs": []
     },
     {
@@ -75,18 +75,18 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "84d0170f-5c78-42f3-8f41-7046d77c965a"
+        "outputId": "72480697-944a-4a11-cfe7-cae2a820ec21"
       },
       "source": [
         "from google.colab import drive\n",
         "drive.mount('/content/drive')"
       ],
-      "execution_count": 66,
+      "execution_count": 2,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "Drive already mounted at /content/drive; to attempt to forcibly remount, call drive.mount(\"/content/drive\", force_remount=True).\n"
+            "Mounted at /content/drive\n"
           ],
           "name": "stdout"
         }
@@ -99,13 +99,13 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "d33615b7-d18c-439c-ebad-9fa08a8ebb0d"
+        "outputId": "6f8153bf-72c9-47fe-ce3a-53e6a9020e71"
       },
       "source": [
         "data = pd.read_csv('/content/drive/My Drive/Dataset/M_BAJAS.txt',delimiter='~')\n",
         "data.Fecha = pd.to_datetime(data.FECHA_BAJA)"
       ],
-      "execution_count": 67,
+      "execution_count": 3,
       "outputs": [
         {
           "output_type": "stream",
@@ -121,16 +121,16 @@
       "cell_type": "code",
       "metadata": {
         "id": "RbQx30WIGlcX",
-        "outputId": "e2bdf173-6ca1-4e55-8162-b36c6af5b79b",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 204
-        }
+        },
+        "outputId": "cdb2f745-f23a-4732-a97a-452d7473ec03"
       },
       "source": [
         "data.head(5)"
       ],
-      "execution_count": 68,
+      "execution_count": 4,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -218,7 +218,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 68
+          "execution_count": 4
         }
       ]
     },
@@ -231,7 +231,7 @@
         "encabezados= ['Año','Mes','Fecha','Antiguedad','Cant_Bajas']\n",
         "data.columns=encabezados"
       ],
-      "execution_count": 69,
+      "execution_count": 5,
       "outputs": []
     },
     {
@@ -242,12 +242,12 @@
           "base_uri": "https://localhost:8080/",
           "height": 204
         },
-        "outputId": "0690531c-4c16-4361-e746-0bda210c48bf"
+        "outputId": "2abc84a9-44cb-4a24-bfe0-1ce779a8eed0"
       },
       "source": [
         "data.head(5)"
       ],
-      "execution_count": 70,
+      "execution_count": 6,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -335,7 +335,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 70
+          "execution_count": 6
         }
       ]
     },
@@ -391,71 +391,20 @@
         "names=['1','2','3','4','5','6','7']\n",
         "data['Antiguedad'] = pd.cut(data['Antiguedad'],bins,labels=names)"
       ],
-      "execution_count": 71,
+      "execution_count": 7,
       "outputs": []
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "t_YnKeJCPmXl",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 49
-        },
-        "outputId": "d284c2be-49b3-42ad-a20a-62d926ae0b0a"
+        "id": "t_YnKeJCPmXl"
       },
       "source": [
         "#validamos datos sin clasificar\n",
         "data[pd.isnull(data.Antiguedad)]"
       ],
-      "execution_count": 72,
-      "outputs": [
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/html": [
-              "<div>\n",
-              "<style scoped>\n",
-              "    .dataframe tbody tr th:only-of-type {\n",
-              "        vertical-align: middle;\n",
-              "    }\n",
-              "\n",
-              "    .dataframe tbody tr th {\n",
-              "        vertical-align: top;\n",
-              "    }\n",
-              "\n",
-              "    .dataframe thead th {\n",
-              "        text-align: right;\n",
-              "    }\n",
-              "</style>\n",
-              "<table border=\"1\" class=\"dataframe\">\n",
-              "  <thead>\n",
-              "    <tr style=\"text-align: right;\">\n",
-              "      <th></th>\n",
-              "      <th>Año</th>\n",
-              "      <th>Mes</th>\n",
-              "      <th>Fecha</th>\n",
-              "      <th>Antiguedad</th>\n",
-              "      <th>Cant_Bajas</th>\n",
-              "    </tr>\n",
-              "  </thead>\n",
-              "  <tbody>\n",
-              "  </tbody>\n",
-              "</table>\n",
-              "</div>"
-            ],
-            "text/plain": [
-              "Empty DataFrame\n",
-              "Columns: [Año, Mes, Fecha, Antiguedad, Cant_Bajas]\n",
-              "Index: []"
-            ]
-          },
-          "metadata": {
-            "tags": []
-          },
-          "execution_count": 72
-        }
-      ]
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "code",
@@ -466,7 +415,7 @@
         "#pasamos datos a clasificados a entero\n",
         "data['Antiguedad'] = data['Antiguedad'].astype('int64')"
       ],
-      "execution_count": 73,
+      "execution_count": 9,
       "outputs": []
     },
     {
@@ -501,7 +450,7 @@
         "grupo = data.groupby(by = ['Año','Mes','Antiguedad']).sum()\n",
         "grupo= pd.DataFrame(grupo).reset_index()"
       ],
-      "execution_count": 74,
+      "execution_count": 10,
       "outputs": []
     },
     {
@@ -512,12 +461,12 @@
           "base_uri": "https://localhost:8080/",
           "height": 204
         },
-        "outputId": "03e20219-7d11-4e91-e16e-d3173e072f57"
+        "outputId": "c84eaf08-ee6e-48c3-e366-e8860d81c15f"
       },
       "source": [
         "grupo.head(5)"
       ],
-      "execution_count": 75,
+      "execution_count": 11,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -599,7 +548,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 75
+          "execution_count": 11
         }
       ]
     },
@@ -637,35 +586,7 @@
         "y= grupo.iloc[:,3].values\n",
         "y = y[:,np.newaxis]"
       ],
-      "execution_count": 76,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "QB-OlPjkfw_G"
-      },
-      "source": [
-        "from sklearn.preprocessing import LabelEncoder, OneHotEncoder\n",
-        "from sklearn.compose import ColumnTransformer\n",
-        "\n",
-        "labelencoder= LabelEncoder()\n",
-        "x[:,2] = labelencoder.fit_transform(x[:,2])\n",
-        "ct = ColumnTransformer([('one_hot_encoder',OneHotEncoder(categories='auto'),[2])],remainder='passthrough')\n",
-        "x=np.array(ct.fit_transform(x),dtype=np.int)"
-      ],
-      "execution_count": 51,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "sKy3cNv2S6wf"
-      },
-      "source": [
-        "pd.DataFrame(x)"
-      ],
-      "execution_count": null,
+      "execution_count": 13,
       "outputs": []
     },
     {
@@ -675,9 +596,9 @@
       },
       "source": [
         "from sklearn.model_selection import train_test_split\n",
-        "x_train, x_test, y_train, y_test = train_test_split(x,y,test_size=0.2, random_state=22)"
+        "x_train, x_test, y_train, y_test = train_test_split(x,y,test_size=0.2, random_state=30)"
       ],
-      "execution_count": 81,
+      "execution_count": 24,
       "outputs": []
     },
     {
@@ -687,7 +608,7 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "c89cbe7a-c938-4741-928a-d7adcafc8930"
+        "outputId": "bac2ec06-ceb2-4eb4-cae6-6a5ef44be3e1"
       },
       "source": [
         "from sklearn.preprocessing import PolynomialFeatures\n",
@@ -702,13 +623,13 @@
         "print(\"precisión del modelo regresión polinomial\")\n",
         "print(lineal_poly.score(x_poly_train,y_train))"
       ],
-      "execution_count": 82,
+      "execution_count": 25,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
             "precisión del modelo regresión polinomial\n",
-            "0.6608317216278091\n"
+            "0.7097360023202347\n"
           ],
           "name": "stdout"
         }
@@ -723,7 +644,7 @@
         "y_predic_train = lineal_poly.predict(x_poly_train)\n",
         "y_predic_test = lineal_poly.predict(x_poly_test)"
       ],
-      "execution_count": 14,
+      "execution_count": 26,
       "outputs": []
     },
     {
@@ -851,7 +772,7 @@
         "    y_g_p.append(acump12)\n",
         "  "
       ],
-      "execution_count": 15,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -893,7 +814,7 @@
         "plt.ylabel (\"Cantidad\" )\n",
         "plt.show()"
       ],
-      "execution_count": 16,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1035,7 +956,7 @@
         "    y_g_p_t.append(acump12)\n",
         "  "
       ],
-      "execution_count": 17,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1077,7 +998,7 @@
         "plt.ylabel (\"Cantidad\" )\n",
         "plt.show()"
       ],
-      "execution_count": 18,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1106,7 +1027,7 @@
         "c_antiguedad = [1,2,3,4,5,6,7] + [1,2,3,4,5,6,7] +[1,2,3,4,5,6,7] +[1,2,3,4,5,6,7] +[1,2,3,4,5,6,7]  \n",
         "df2 = pd.DataFrame({\"Año\": c_anio, \"Mes\": c_mes, \"Antiguedad\": c_antiguedad})"
       ],
-      "execution_count": 19,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1122,7 +1043,7 @@
       "source": [
         "df2.head(5)"
       ],
-      "execution_count": 20,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1219,7 +1140,7 @@
         "ct2 = ColumnTransformer([('one_hot_encoder',OneHotEncoder(categories='auto'),[2])],remainder='passthrough')\n",
         "x2=np.array(ct2.fit_transform(x2),dtype=np.int)"
       ],
-      "execution_count": 21,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1231,7 +1152,7 @@
         "x_poly_p = poly_reg.fit_transform(x2)\n",
         "y_predic_x2 = lineal_poly.predict(x_poly_p)"
       ],
-      "execution_count": 22,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1322,7 +1243,7 @@
         "  if _== 12:    \n",
         "    y2_p.append(acump12)\n"
       ],
-      "execution_count": 23,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1364,7 +1285,7 @@
         "plt.ylabel (\"Cantidad\" )\n",
         "plt.show()"
       ],
-      "execution_count": 24,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1394,7 +1315,7 @@
       "source": [
         "grupo.corr(method ='pearson')"
       ],
-      "execution_count": 26,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1476,10 +1397,10 @@
       "cell_type": "code",
       "metadata": {
         "id": "xAebe_Wnug3X",
-        "outputId": "8b577e90-6b16-48fc-f859-fc998a198506",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "8b577e90-6b16-48fc-f859-fc998a198506"
       },
       "source": [
         "print('Datos del modelo de Regresión')\n",
@@ -1489,7 +1410,7 @@
         "print('\"Valor de la Intersección \"b\":')\n",
         "print(lineal_poly.intercept_)"
       ],
-      "execution_count": 25,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
