--- a/Regresión/Regresion_Bajas_Antiguedad_v9.ipynb
+++ b/Regresión/Regresion_Bajas_Antiguedad_v9.ipynb
@@ -1401,35 +1401,180 @@
       "metadata": {
         "id": "xAebe_Wnug3X",
         "colab": {
-          "base_uri": "https://localhost:8080/"
+          "base_uri": "https://localhost:8080/",
+          "height": 151
         },
-        "outputId": "3c74ea7f-dfc8-4641-c6dc-0f463721fc82"
+        "outputId": "63fc5a77-3e87-4a68-d16f-553d01093ae4"
       },
       "source": [
         "print('Datos del modelo de Regresión')\n",
         "print()\n",
         "print('\"Valor de la pendiente o coeficiente \"a\":')\n",
-        "print(lineal_poly.coef_)\n",
-        "print('\"Valor de la Intersección \"b\":')\n",
-        "print(lineal_poly.intercept_)"
+        "pd.DataFrame(lineal_poly.coef_)"
       ],
-      "execution_count": 59,
+      "execution_count": 60,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
             "Datos del modelo de Regresión\n",
             "\n",
-            "\"Valor de la pendiente o coeficiente \"a\":\n",
-            "[[ 0.00000000e+00  9.81842629e-04  6.74317300e-02  1.20518614e-01\n",
-            "  -3.60774765e-06  6.83455374e+01  1.21658602e+02 -1.54422616e+04\n",
-            "  -9.98591425e+03 -2.42888510e+04  2.31463469e-05 -3.38348392e-02\n",
-            "  -6.03016905e-02  7.64654556e+00  4.93089119e+00  1.20842410e+01\n",
-            "   1.19376235e-01  5.72858548e-01  2.27003232e+00 -1.03998195e+01]]\n",
-            "\"Valor de la Intersección \"b\":\n",
-            "[-190507.56947408]\n"
+            "\"Valor de la pendiente o coeficiente \"a\":\n"
           ],
           "name": "stdout"
+        },
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/html": [
+              "<div>\n",
+              "<style scoped>\n",
+              "    .dataframe tbody tr th:only-of-type {\n",
+              "        vertical-align: middle;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe tbody tr th {\n",
+              "        vertical-align: top;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe thead th {\n",
+              "        text-align: right;\n",
+              "    }\n",
+              "</style>\n",
+              "<table border=\"1\" class=\"dataframe\">\n",
+              "  <thead>\n",
+              "    <tr style=\"text-align: right;\">\n",
+              "      <th></th>\n",
+              "      <th>0</th>\n",
+              "      <th>1</th>\n",
+              "      <th>2</th>\n",
+              "      <th>3</th>\n",
+              "      <th>4</th>\n",
+              "      <th>5</th>\n",
+              "      <th>6</th>\n",
+              "      <th>7</th>\n",
+              "      <th>8</th>\n",
+              "      <th>9</th>\n",
+              "      <th>10</th>\n",
+              "      <th>11</th>\n",
+              "      <th>12</th>\n",
+              "      <th>13</th>\n",
+              "      <th>14</th>\n",
+              "      <th>15</th>\n",
+              "      <th>16</th>\n",
+              "      <th>17</th>\n",
+              "      <th>18</th>\n",
+              "      <th>19</th>\n",
+              "    </tr>\n",
+              "  </thead>\n",
+              "  <tbody>\n",
+              "    <tr>\n",
+              "      <th>0</th>\n",
+              "      <td>0.0</td>\n",
+              "      <td>0.000982</td>\n",
+              "      <td>0.067432</td>\n",
+              "      <td>0.120519</td>\n",
+              "      <td>-0.000004</td>\n",
+              "      <td>68.345537</td>\n",
+              "      <td>121.658602</td>\n",
+              "      <td>-15442.261606</td>\n",
+              "      <td>-9985.91425</td>\n",
+              "      <td>-24288.851005</td>\n",
+              "      <td>0.000023</td>\n",
+              "      <td>-0.033835</td>\n",
+              "      <td>-0.060302</td>\n",
+              "      <td>7.646546</td>\n",
+              "      <td>4.930891</td>\n",
+              "      <td>12.084241</td>\n",
+              "      <td>0.119376</td>\n",
+              "      <td>0.572859</td>\n",
+              "      <td>2.270032</td>\n",
+              "      <td>-10.39982</td>\n",
+              "    </tr>\n",
+              "  </tbody>\n",
+              "</table>\n",
+              "</div>"
+            ],
+            "text/plain": [
+              "    0         1         2         3   ...        16        17        18        19\n",
+              "0  0.0  0.000982  0.067432  0.120519  ...  0.119376  0.572859  2.270032 -10.39982\n",
+              "\n",
+              "[1 rows x 20 columns]"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 60
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "-8f1ID05YSj1",
+        "outputId": "a0b94b2f-26f0-41a8-d5a7-ae5d776589e9",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 97
+        }
+      },
+      "source": [
+        "print('\"Valor de la Intersección \"b\":')\n",
+        "pd.DataFrame(lineal_poly.intercept_)"
+      ],
+      "execution_count": 61,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "\"Valor de la Intersección \"b\":\n"
+          ],
+          "name": "stdout"
+        },
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/html": [
+              "<div>\n",
+              "<style scoped>\n",
+              "    .dataframe tbody tr th:only-of-type {\n",
+              "        vertical-align: middle;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe tbody tr th {\n",
+              "        vertical-align: top;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe thead th {\n",
+              "        text-align: right;\n",
+              "    }\n",
+              "</style>\n",
+              "<table border=\"1\" class=\"dataframe\">\n",
+              "  <thead>\n",
+              "    <tr style=\"text-align: right;\">\n",
+              "      <th></th>\n",
+              "      <th>0</th>\n",
+              "    </tr>\n",
+              "  </thead>\n",
+              "  <tbody>\n",
+              "    <tr>\n",
+              "      <th>0</th>\n",
+              "      <td>-190507.569474</td>\n",
+              "    </tr>\n",
+              "  </tbody>\n",
+              "</table>\n",
+              "</div>"
+            ],
+            "text/plain": [
+              "               0\n",
+              "0 -190507.569474"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 61
         }
       ]
     }
