--- a/Regresión/Regresion_Bajas_Antiguedad_v9.ipynb
+++ b/Regresión/Regresion_Bajas_Antiguedad_v9.ipynb
@@ -1161,6 +1161,28 @@
     {
       "cell_type": "code",
       "metadata": {
+        "id": "B2N8Fsb2Yuhl"
+      },
+      "source": [
+        "pd.DataFrame(x_poly_p)"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "cwrLi9YjYkWy"
+      },
+      "source": [
+        "pd.DataFrame(y_predic_x2)"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
         "id": "4pDzRptII6lC"
       },
       "source": [
@@ -1512,12 +1534,12 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "-8f1ID05YSj1",
-        "outputId": "a0b94b2f-26f0-41a8-d5a7-ae5d776589e9",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 97
-        }
+        },
+        "id": "-8f1ID05YSj1",
+        "outputId": "a0b94b2f-26f0-41a8-d5a7-ae5d776589e9"
       },
       "source": [
         "print('\"Valor de la Intersección \"b\":')\n",
