--- a/Regresión/Regresion_Bajas_Antiguedad_v9.ipynb
+++ b/Regresión/Regresion_Bajas_Antiguedad_v9.ipynb
@@ -56,7 +56,7 @@
         "auth.authenticate_user()\n",
         "gc = gspread.authorize (GoogleCredentials.get_application_default())"
       ],
-      "execution_count": 38,
+      "execution_count": 1,
       "outputs": []
     },
     {
@@ -75,18 +75,18 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "9605ac3d-5802-4f0b-d602-ef80e69b189e"
+        "outputId": "9cca5708-77fb-480a-99b7-3e625798fff5"
       },
       "source": [
         "from google.colab import drive\n",
         "drive.mount('/content/drive')"
       ],
-      "execution_count": 39,
+      "execution_count": 2,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "Drive already mounted at /content/drive; to attempt to forcibly remount, call drive.mount(\"/content/drive\", force_remount=True).\n"
+            "Mounted at /content/drive\n"
           ],
           "name": "stdout"
         }
@@ -99,13 +99,13 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "b57d8dc2-38d4-4f87-96cd-610ba39966a6"
+        "outputId": "7b1a321d-b5da-45b1-bd2e-bea5b7a46d70"
       },
       "source": [
         "data = pd.read_csv('/content/drive/My Drive/Dataset/M_BAJAS.txt',delimiter='~')\n",
         "data.Fecha = pd.to_datetime(data.FECHA_BAJA)"
       ],
-      "execution_count": 40,
+      "execution_count": 3,
       "outputs": [
         {
           "output_type": "stream",
@@ -125,7 +125,7 @@
           "base_uri": "https://localhost:8080/",
           "height": 204
         },
-        "outputId": "cdb2f745-f23a-4732-a97a-452d7473ec03"
+        "outputId": "6150b799-5810-4b96-932a-a3bbe27d92d9"
       },
       "source": [
         "data.head(5)"
@@ -231,7 +231,7 @@
         "encabezados= ['Año','Mes','Fecha','Antiguedad','Cant_Bajas']\n",
         "data.columns=encabezados"
       ],
-      "execution_count": 41,
+      "execution_count": 5,
       "outputs": []
     },
     {
@@ -242,7 +242,7 @@
           "base_uri": "https://localhost:8080/",
           "height": 204
         },
-        "outputId": "2abc84a9-44cb-4a24-bfe0-1ce779a8eed0"
+        "outputId": "684f171a-7b5f-4328-a2e2-8e752e77e445"
       },
       "source": [
         "data.head(5)"
@@ -391,7 +391,7 @@
         "names=['1','2','3','4','5','6','7']\n",
         "data['Antiguedad'] = pd.cut(data['Antiguedad'],bins,labels=names)"
       ],
-      "execution_count": 42,
+      "execution_count": 7,
       "outputs": []
     },
     {
@@ -415,7 +415,7 @@
         "#pasamos datos a clasificados a entero\n",
         "data['Antiguedad'] = data['Antiguedad'].astype('int64')"
       ],
-      "execution_count": 43,
+      "execution_count": 8,
       "outputs": []
     },
     {
@@ -450,7 +450,7 @@
         "grupo = data.groupby(by = ['Año','Mes','Antiguedad']).sum()\n",
         "grupo= pd.DataFrame(grupo).reset_index()"
       ],
-      "execution_count": 44,
+      "execution_count": 9,
       "outputs": []
     },
     {
@@ -461,12 +461,12 @@
           "base_uri": "https://localhost:8080/",
           "height": 204
         },
-        "outputId": "c84eaf08-ee6e-48c3-e366-e8860d81c15f"
+        "outputId": "59a899e7-e65a-43f9-afae-76acedb862b4"
       },
       "source": [
         "grupo.head(5)"
       ],
-      "execution_count": 11,
+      "execution_count": 10,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -548,7 +548,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 11
+          "execution_count": 10
         }
       ]
     },
@@ -586,7 +586,7 @@
         "y= grupo.iloc[:,3].values\n",
         "y = y[:,np.newaxis]"
       ],
-      "execution_count": 45,
+      "execution_count": 12,
       "outputs": []
     },
     {
@@ -598,7 +598,7 @@
         "from sklearn.model_selection import train_test_split\n",
         "x_train, x_test, y_train, y_test = train_test_split(x,y,test_size=0.2, random_state=30)"
       ],
-      "execution_count": 46,
+      "execution_count": 13,
       "outputs": []
     },
     {
@@ -608,7 +608,7 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "ed4ad549-b075-4a46-b3c9-690b12166775"
+        "outputId": "94f0436b-2da8-4f98-de36-9354e44c2b32"
       },
       "source": [
         "from sklearn.preprocessing import PolynomialFeatures\n",
@@ -623,7 +623,7 @@
         "print(\"precisión del modelo regresión polinomial\")\n",
         "print(lineal_poly.score(x_poly_train,y_train))"
       ],
-      "execution_count": 47,
+      "execution_count": 14,
       "outputs": [
         {
           "output_type": "stream",
@@ -644,7 +644,7 @@
         "y_predic_train = lineal_poly.predict(x_poly_train)\n",
         "y_predic_test = lineal_poly.predict(x_poly_test)"
       ],
-      "execution_count": 48,
+      "execution_count": 15,
       "outputs": []
     },
     {
@@ -783,7 +783,7 @@
         "    y_g_p.append(acump12)\n",
         "  "
       ],
-      "execution_count": 49,
+      "execution_count": 16,
       "outputs": []
     },
     {
@@ -794,7 +794,7 @@
           "base_uri": "https://localhost:8080/",
           "height": 295
         },
-        "outputId": "48a8c6ba-13c1-4bb0-8ef4-b2534ae60cd9"
+        "outputId": "ed261fc5-23bb-4cfc-b3a0-9c241662b71f"
       },
       "source": [
         "#Gráfica\n",
@@ -825,7 +825,7 @@
         "plt.ylabel (\"Cantidad\" )\n",
         "plt.show()"
       ],
-      "execution_count": 50,
+      "execution_count": 17,
       "outputs": [
         {
           "output_type": "display_data",
@@ -967,7 +967,7 @@
         "    y_g_p_t.append(acump12)\n",
         "  "
       ],
-      "execution_count": 51,
+      "execution_count": 18,
       "outputs": []
     },
     {
@@ -978,7 +978,7 @@
           "base_uri": "https://localhost:8080/",
           "height": 295
         },
-        "outputId": "c58fc430-522c-4f7b-da92-aec29b7490b0"
+        "outputId": "1ad7d5d5-18aa-465f-95a0-aad99cd02ee0"
       },
       "source": [
         "#Gráfica datos test\n",
@@ -1009,7 +1009,7 @@
         "plt.ylabel (\"Cantidad\" )\n",
         "plt.show()"
       ],
-      "execution_count": 52,
+      "execution_count": 19,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1038,23 +1038,58 @@
         "c_antiguedad = [1,2,3,4,5,6,7] + [1,2,3,4,5,6,7] +[1,2,3,4,5,6,7] +[1,2,3,4,5,6,7] +[1,2,3,4,5,6,7]  \n",
         "df2 = pd.DataFrame({\"Año\": c_anio, \"Mes\": c_mes, \"Antiguedad\": c_antiguedad})"
       ],
-      "execution_count": 53,
+      "execution_count": 55,
       "outputs": []
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "AvIz4cZg0tjk",
+        "id": "AvIz4cZg0tjk"
+      },
+      "source": [
+        "df2"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "u8UQdBqTHTWJ"
+      },
+      "source": [
+        "x2= df2.iloc[:,:].values\n",
+        "x2=np.array(x2)"
+      ],
+      "execution_count": 56,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "1YXKFVDQ1eOU"
+      },
+      "source": [
+        "x_poly_p = poly_reg.fit_transform(x2)\n",
+        "y_predic_x2 = lineal_poly.predict(x_poly_p)"
+      ],
+      "execution_count": 57,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "B2N8Fsb2Yuhl",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 204
         },
-        "outputId": "1c0f0277-ac36-45af-c8c3-afa6eef1b5f2"
+        "outputId": "635e0209-0f7f-4bde-9372-53df38dc1e45"
       },
       "source": [
-        "df2.head(5)"
+        "pd.DataFrame(x2).head(5)"
       ],
-      "execution_count": 33,
+      "execution_count": 58,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1078,9 +1113,9 @@
               "  <thead>\n",
               "    <tr style=\"text-align: right;\">\n",
               "      <th></th>\n",
-              "      <th>Año</th>\n",
-              "      <th>Mes</th>\n",
-              "      <th>Antiguedad</th>\n",
+              "      <th>0</th>\n",
+              "      <th>1</th>\n",
+              "      <th>2</th>\n",
               "    </tr>\n",
               "  </thead>\n",
               "  <tbody>\n",
@@ -1119,55 +1154,20 @@
               "</div>"
             ],
             "text/plain": [
-              "    Año Mes  Antiguedad\n",
-              "0  2020   8           1\n",
-              "1  2020   8           2\n",
-              "2  2020   8           3\n",
-              "3  2020   8           4\n",
-              "4  2020   8           5"
+              "      0  1  2\n",
+              "0  2020  8  1\n",
+              "1  2020  8  2\n",
+              "2  2020  8  3\n",
+              "3  2020  8  4\n",
+              "4  2020  8  5"
             ]
           },
           "metadata": {
             "tags": []
           },
-          "execution_count": 33
+          "execution_count": 58
         }
       ]
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "u8UQdBqTHTWJ"
-      },
-      "source": [
-        "x2= df2.iloc[:,:].values\n",
-        "x2=np.array(x2)"
-      ],
-      "execution_count": 54,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "1YXKFVDQ1eOU"
-      },
-      "source": [
-        "x_poly_p = poly_reg.fit_transform(x2)\n",
-        "y_predic_x2 = lineal_poly.predict(x_poly_p)"
-      ],
-      "execution_count": 55,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "B2N8Fsb2Yuhl"
-      },
-      "source": [
-        "pd.DataFrame(x_poly_p)"
-      ],
-      "execution_count": null,
-      "outputs": []
     },
     {
       "cell_type": "code",
@@ -1183,7 +1183,85 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "4pDzRptII6lC"
+        "id": "s5imT3-kPf7c",
+        "outputId": "3204003d-bd60-46d4-db92-063dc3761ace",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "x2[:,1]"
+      ],
+      "execution_count": 50,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "array(['8', '8', '8', '8', '8', '8', '8', '9', '9', '9', '9', '9', '9',\n",
+              "       '9', '10', '10', '10', '10', '10', '10', '10', '11', '11', '11',\n",
+              "       '11', '11', '11', '11', '12', '12', '12', '12', '12', '12', '12'],\n",
+              "      dtype=object)"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 50
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "ViyQGZ0J7IPp",
+        "outputId": "7381aabe-6cb9-4a2e-e5ce-bda918a04280",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 35
+        }
+      },
+      "source": [
+        "x2[1,0]"
+      ],
+      "execution_count": 52,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "application/vnd.google.colaboratory.intrinsic+json": {
+              "type": "string"
+            },
+            "text/plain": [
+              "'2020'"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 52
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "q9lSIomZQQ-X"
+      },
+      "source": [
+        "y_predic_x2  "
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "4pDzRptII6lC",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "33d0b8eb-7eab-4667-9bbc-d8f6a89e9da9"
       },
       "source": [
         "cont_reg=0\n",
@@ -1240,6 +1318,8 @@
         "  else:\n",
         "      pass\n",
         "  cont_reg=cont_reg+1\n",
+        "print (acump8)\n",
+        " \n",
         "x2_p, y2_p = [],[]\n",
         "for _ in range(1,13):\n",
         "  x2_p.append(_)   \n",
@@ -1268,8 +1348,44 @@
         "  if _== 12:    \n",
         "    y2_p.append(acump12)\n"
       ],
-      "execution_count": 56,
-      "outputs": []
+      "execution_count": 61,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "0\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "tVjCEyxKQB-N",
+        "outputId": "dd69786f-dc6a-4b77-87dc-1c776b1c0a0d",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "y2_p"
+      ],
+      "execution_count": 62,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "[0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0]"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 62
+        }
+      ]
     },
     {
       "cell_type": "code",
@@ -1279,7 +1395,7 @@
           "base_uri": "https://localhost:8080/",
           "height": 295
         },
-        "outputId": "122dba9a-8083-4da6-cc2a-4ef962eef9c1"
+        "outputId": "67f87949-a337-447b-9c17-e8d47b790f20"
       },
       "source": [
         "#Gráfica datos predicción\n",
@@ -1310,7 +1426,7 @@
         "plt.ylabel (\"Cantidad\" )\n",
         "plt.show()"
       ],
-      "execution_count": 57,
+      "execution_count": 25,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1340,7 +1456,7 @@
       "source": [
         "grupo.corr(method ='pearson')"
       ],
-      "execution_count": 58,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1434,7 +1550,7 @@
         "print('\"Valor de la pendiente o coeficiente \"a\":')\n",
         "pd.DataFrame(lineal_poly.coef_)"
       ],
-      "execution_count": 60,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1545,7 +1661,7 @@
         "print('\"Valor de la Intersección \"b\":')\n",
         "pd.DataFrame(lineal_poly.intercept_)"
       ],
-      "execution_count": 61,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
